[gd_scene load_steps=24 format=3 uid="uid://5qkboetlt7o"]

[ext_resource type="Script" path="res://scripts/level2.gd" id="1_6jb3c"]
[ext_resource type="Script" path="res://scripts/scenecamera.gd" id="2_6nkc0"]
[ext_resource type="Texture2D" uid="uid://cfttekcs6csgq" path="res://graphics/edgeupper.png" id="3_b0it2"]
[ext_resource type="Texture2D" uid="uid://b0dad4cju0kwj" path="res://graphics/edgelower.png" id="4_tohmq"]
[ext_resource type="Texture2D" uid="uid://c41j65q6ep8rh" path="res://graphics/hockeyrink.png" id="5_1kjir"]
[ext_resource type="Script" path="res://scripts/Puck.gd" id="6_0pjht"]
[ext_resource type="Texture2D" uid="uid://c5y7qssdkh68e" path="res://graphics/faces/06.png" id="7_23v0o"]
[ext_resource type="Script" path="res://scripts/Goal.gd" id="8_g34su"]
[ext_resource type="PackedScene" uid="uid://bi7kt5si2myap" path="res://scenes/packed_nodes/goal.tscn" id="8_r7iox"]
[ext_resource type="Texture2D" uid="uid://7uouifp04lqd" path="res://graphics/goal.png" id="8_tl3a3"]
[ext_resource type="Texture2D" uid="uid://bbxwhtrngd6h0" path="res://graphics/goalCollider.png" id="9_qeuu2"]
[ext_resource type="PackedScene" uid="uid://cqhtkrdsn76he" path="res://scenes/packed_nodes/power_up_spawner.tscn" id="12_m55ur"]
[ext_resource type="Script" path="res://scripts/countdownlabel.gd" id="13_nsovs"]
[ext_resource type="Script" path="res://scripts/scorelabel.gd" id="14_tc66a"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_e4vd4"]
bounce = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_oj48k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hd4t0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4cp3v"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tol25"]
friction = 0.3
rough = true
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4us3j"]
size = Vector2(68.309, 30.9912)

[sub_resource type="CircleShape2D" id="CircleShape2D_ok0us"]
radius = 1000.0

[sub_resource type="SystemFont" id="SystemFont_nwqr2"]

[sub_resource type="SystemFont" id="SystemFont_ct0r3"]

[node name="level2" type="Node2D"]
script = ExtResource("1_6jb3c")

[node name="scenecamera" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(0.565, 0.565)
script = ExtResource("2_6nkc0")

[node name="spawnlocations2" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="spawnlocations2"]
position = Vector2(850, 564)

[node name="1" type="Node2D" parent="spawnlocations2"]
position = Vector2(1179, 584)

[node name="spawnlocations3" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="spawnlocations3"]
position = Vector2(899.248, 676.646)

[node name="1" type="Node2D" parent="spawnlocations3"]
position = Vector2(949.702, 431.104)

[node name="2" type="Node2D" parent="spawnlocations3"]
position = Vector2(1139.74, 685.055)

[node name="spawnlocations4" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="spawnlocations4"]
position = Vector2(852, 566)

[node name="1" type="Node2D" parent="spawnlocations4"]
position = Vector2(1176, 581)

[node name="2" type="Node2D" parent="spawnlocations4"]
position = Vector2(984.179, 426.059)

[node name="3" type="Node2D" parent="spawnlocations4"]
position = Vector2(1049.77, 728.781)

[node name="rink" type="Node2D" parent="."]
position = Vector2(1018, 578)

[node name="RigidBody2D" type="RigidBody2D" parent="rink" groups=["walls"]]
collision_layer = 3
gravity_scale = 0.0
freeze = true

[node name="Sprite2D" type="Sprite2D" parent="rink/RigidBody2D"]
position = Vector2(0, -283)
rotation = 1.5708
texture = ExtResource("3_b0it2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rink/RigidBody2D"]
position = Vector2(0, -283)
rotation = 1.5708
polygon = PackedVector2Array(283.5, -996.6, 285.5, -995.6, 285.5, -980.6, 282.9, -978, -41.5, -978, -41.5, -977, -50.5, -977, -50.5, -976.1, -71.5, -973.1, -71.5, -972.2, -90.5, -967.2, -90.5, -966.2, -98.5, -964.2, -98.5, -963.4, -107.3, -959, -110.5, -959, -112.5, -958.3, -112.5, -957.4, -133.5, -945.4, -133.5, -944.5, -140.1, -939, -141.5, -939, -149.1, -931, -150.5, -931, -172.5, -908.6, -172.5, -906.5, -175.5, -904.5, -175.5, -902.6, -181.5, -895.5, -181.5, -893.6, -186.5, -887.6, -186.5, -885, -188.1, -885, -188.5, -884.6, -188.5, -882.8, -199.5, -860.8, -199.5, -857.8, -206.5, -839, -206.5, -833.7, -208.5, -830.7, -208.5, -821.8, -210.5, -816.8, -210.5, -805, -211.5, -805, -211.5, 806, -210.5, 806, -210.5, 820, -209.6, 820, -208.6, 832, -207.7, 832, -199.7, 862, -198.8, 862, -187.9, 888, -186.9, 888, -178.9, 902, -178.1, 902, -176.5, 903.6, -176.5, 905, -169.5, 912.6, -169.5, 914, -162.5, 920.6, -162.5, 922, -145.1, 939, -143.1, 939, -133.1, 948, -130.9, 948, -129.9, 950, -128.1, 950, -123.1, 954, -121.3, 954, -118.5, 955.4, -118.5, 956.6, -118.1, 957, -116.3, 957, -113.5, 958.4, -113.5, 959.6, -113.1, 960, -111.3, 960, -92.3, 969, -89.3, 969, -73.4, 975, -68.4, 975, -54.2, 979, -45.5, 979, -19.5, 981, 283.5, 981, 283.5, 982.4, 285.5, 983.4, 285.5, 996, 284.1, 996, 283.1, 998, -283.5, 998, -283.5, 996.6, -285.5, 995.6, -285.5, -995.6, -283.5, -996.6, -283.5, -998, 283.5, -998)

[node name="RigidBody2D2" type="RigidBody2D" parent="rink" groups=["walls"]]
collision_layer = 3
gravity_scale = 0.0
freeze = true

[node name="Sprite2D" type="Sprite2D" parent="rink/RigidBody2D2"]
position = Vector2(0, 292)
rotation = 1.5708
texture = ExtResource("4_tohmq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rink/RigidBody2D2"]
position = Vector2(0, 292)
rotation = 1.5708
polygon = PackedVector2Array(283.5, -996.6, 285.5, -995.6, 285.5, 996, 284.1, 996, 283.1, 998, -283.5, 998, -283.5, 996.6, -285.5, 995.6, -285.5, 983.6, -282.9, 981, -184.5, 981, -184.5, 980, -175.5, 980, 13.5, 981, 13.5, 980, 47.5, 979, 47.5, 978.1, 57.5, 977.1, 57.5, 976.2, 85.5, 969.2, 85.5, 968.3, 94.5, 965.3, 94.5, 964.4, 99.3, 962, 101.5, 962, 101.5, 961.4, 104.3, 960, 106.5, 960, 106.5, 959.4, 114.5, 955.4, 114.5, 954.6, 117.1, 952, 119.2, 952, 125.5, 948.4, 125.5, 947.5, 131.1, 943, 132.5, 943, 132.5, 942.4, 136.5, 940.4, 136.5, 939.6, 141.1, 935, 142.5, 935, 159.5, 918.6, 159.5, 916.6, 168.5, 907.6, 168.5, 905.6, 176.5, 895.6, 176.5, 893.6, 179.5, 890.6, 179.5, 888.8, 182.9, 882, 184.1, 882, 184.5, 881.6, 184.5, 879.7, 188.5, 873.7, 188.5, 870, 190.1, 870, 190.5, 869.6, 190.5, 866.8, 194.5, 858.8, 194.5, 855.8, 202.5, 829.7, 202.5, 822.8, 204.5, 817, 204.5, 802, 205.8, 802, 206.5, 800, 206.5, 799.3, 204.5, 796.3, 204.5, -797, 205.7, -797, 206.3, -800, 205.6, -800, 199.6, -839, 198.6, -839, 197.6, -846, 196.8, -846, 190.7, -866, 189.9, -866, 180.9, -886, 179.9, -886, 171.9, -900, 171.1, -900, 169.5, -901.6, 169.5, -903, 168.9, -903, 166.9, -907, 166.1, -907, 162.5, -910.6, 162.5, -912, 154.5, -919.6, 154.5, -921, 139.1, -936, 137, -936, 134, -940, 132.2, -940, 118.2, -951, 114.9, -951, 113.9, -953, 112.1, -953, 109.1, -956, 107.2, -956, 97.2, -962, 94.2, -962, 90.2, -965, 87.3, -965, 69.4, -972, 64.3, -972, 57.3, -975, 51.4, -975, 37.3, -978, -283.5, -978, -283.5, -979.4, -285.5, -980.4, -285.5, -996, -283.9, -996, -283.5, -996.4, -283.5, -998, 283.5, -998)

[node name="Sprite2D" type="Sprite2D" parent="rink"]
rotation = 1.5708
texture = ExtResource("5_1kjir")

[node name="center" type="Node2D" parent="."]
position = Vector2(1013.35, 577.78)

[node name="audioplayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 3

[node name="audioplayer2" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
max_polyphony = 3

[node name="audioplayer3" type="AudioStreamPlayer" parent="."]
volume_db = 10.0
max_polyphony = 3

[node name="Puck" type="RigidBody2D" parent="."]
position = Vector2(1019.06, 578.558)
collision_layer = 2
collision_mask = 2
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_e4vd4")
gravity_scale = 0.0
script = ExtResource("6_0pjht")

[node name="Sprite2D" type="Sprite2D" parent="Puck"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.36, 0.36)
texture = ExtResource("7_23v0o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puck"]
scale = Vector2(1.215, 1.215)
shape = SubResource("CircleShape2D_oj48k")

[node name="Area2D" type="Area2D" parent="Puck"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puck/Area2D"]
scale = Vector2(7.535, 7.535)
shape = SubResource("CircleShape2D_hd4t0")

[node name="PinJoint2D" type="DampedSpringJoint2D" parent="Puck"]
node_a = NodePath("..")
length = 1.0
stiffness = 64.0
damping = 16.0

[node name="PuckCenter" type="Area2D" parent="Puck" groups=["puck"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puck/PuckCenter"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_4cp3v")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 11.673
max_polyphony = 5

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
volume_db = 14.857
max_polyphony = 5

[node name="Goal1" parent="." instance=ExtResource("8_r7iox")]

[node name="Goal2" type="Node2D" parent="."]
position = Vector2(222.775, 574.308)
rotation = 1.5708
scale = Vector2(1.715, 1.715)
script = ExtResource("8_g34su")

[node name="Sprite2D" type="Sprite2D" parent="Goal2"]
z_index = 3
position = Vector2(0.583099, 22.1575)
texture = ExtResource("8_tl3a3")

[node name="RigidBody2D" type="RigidBody2D" parent="Goal2"]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_tol25")
gravity_scale = 0.0
lock_rotation = true
freeze = true

[node name="Sprite2D" type="Sprite2D" parent="Goal2/RigidBody2D"]
visible = false
position = Vector2(0.725, 22.112)
texture = ExtResource("9_qeuu2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Goal2/RigidBody2D"]
position = Vector2(0.725, 20.152)
scale = Vector2(0.905, 0.86)
polygon = PackedVector2Array(-43, -16, -42, -16, -42, -14, -43, -14, -43, -10, -44, -10, -44, 8, -43, 8, -43, 14, -42, 14, -42, 17, -41, 17, -41, 18, -40, 18, -40, 19, -39, 19, -39, 20, -36, 20, -36, 21, -20, 21, -20, 22, 1, 22, 1, 21, 33, 21, 33, 20, 34, 20, 34, 19, 35, 19, 35, 18, 36, 18, 36, 16, 37, 16, 37, 9, 38, 9, 38, 4, 39, 4, 39, -7, 38, -7, 38, -12, 37, -12, 37, -16, 38, -16, 38, -17, 39, -17, 39, -16, 40, -16, 40, -14, 41, -14, 41, -7, 42, -7, 42, 5, 41, 5, 41, 11, 40, 11, 40, 17, 39, 17, 39, 20, 38, 20, 38, 21, 37, 21, 37, 23, 35, 23, 35, 24, -39, 24, -39, 23, -41, 23, -41, 22, -42, 22, -42, 20, -43, 20, -43, 19, -44, 19, -44, 18, -45, 18, -45, 13, -46, 13, -46, 5, -47, 5, -47, -9, -46, -9, -46, -14, -45, -14, -45, -17, -43, -17)

[node name="Area2D" type="Area2D" parent="Goal2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal2/Area2D"]
position = Vector2(-0.830902, 20.0729)
shape = SubResource("RectangleShape2D_4us3j")

[node name="PowerUpSpawnArea" type="Area2D" parent="."]
position = Vector2(1020, 578)
scale = Vector2(0.48, 0.48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUpSpawnArea"]
shape = SubResource("CircleShape2D_ok0us")

[node name="PowerUpSpawner" parent="." node_paths=PackedStringArray("centerPosObject") instance=ExtResource("12_m55ur")]
centerPosObject = NodePath("../PowerUpSpawnArea")

[node name="countdownlabel" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 3
offset_left = 834.253
offset_top = 379.094
offset_right = 1224.25
offset_bottom = 993.094
theme_override_fonts/font = SubResource("SystemFont_nwqr2")
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("13_nsovs")

[node name="scorelabel" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 3
offset_left = 834.253
offset_top = 379.094
offset_right = 1135.25
offset_bottom = 552.094
theme_override_fonts/font = SubResource("SystemFont_ct0r3")
theme_override_font_sizes/font_size = 34
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("14_tc66a")

[connection signal="body_entered" from="Puck/Area2D" to="Puck" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Puck/Area2D" to="Puck" method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Goal2/Area2D" to="Goal2" method="_on_area_2d_area_entered"]
